@@ -2,6 +2,13 @@
 
 2006-06-11	Konstantin V. Arkhipov
 
+	* main/DAOs/FileSystemDaoWorker.class.php,
+	main/DAOs/SmartDaoWorker.class.php,
+	main/DAOs/VoodooDaoWorker.class.php: transparent DAO-workers are now
+	WatermarkedPeer-friendly.
+
+2006-06-11	Konstantin V. Arkhipov
+
 	* 0.4.6 released.
 
 2006-06-08	Konstantin V. Arkhipov
